Fixed spacing for aside

--- a/src/files/less/core.less
+++ b/src/files/less/core.less
@@ -33,15 +33,11 @@ code {
   font-size: 80%;
 }
 
-.main-content {
-  padding-bottom: 40px;  
-}
-
 ul.social {
   display: table;
   list-style: none;
   width: 100%;
-  padding: 10px 0px 0 35px;
+  padding: 10px 0 0 0;
 
   & > li {
     display: table-cell; 
@@ -59,4 +55,8 @@ ul.social {
     font-size: 17px;
     line-height: 1.4;
   }
+}
+
+aside.panel {
+  margin-top: 30px;
 }
